--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
   "keywords": [
     "da99"
   ],
-  "engines": [ "node": "0.x.x"]
   "author": "da99",
   "license": "MIT",
   "readmeFilename": "README.md",
   "gitHead": "aa24c91f6358df94e3981f7b4aa3dd8f95252def"
+  , "engines": { "node": "0.x.x" }
+  , "dependencies": {
+    "underscore" : "1.x.x"
+  }
+
 }
