--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "River",
+  "name": "da_river",
   "version": "0.1.0",
   "description": "Flow control that has nothing to do with nature's rivers.",
   "main": "lib/River.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
