--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "da_river",
   "version": "0.1.1",
-  "description": "Flow control that has nothing to do with nature's rivers.",
+  "description": "Async flow control. Not ready for public consumption.",
   "main": "lib/River.js",
   "scripts": {
     "test": "mocha"
