Renamed remote git repo

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/da99/River.js.git"
+    "url": "git://github.com/da99/da_river.git"
   },
   "keywords": [
     "da99"
